twaked groovy example script and tweaked factory